# tlo

./: .gitignore  Cargo.toml  README.md
contracts/: .gitkeep  foundry.toml
contracts/interfaces/: IKyberGate.sol  IVdfBeacon.sol
contracts/tlo-cac/: TLOHoneypotCaC.sol
contracts/tlo-full-lwe/: TLOHoneypotFullLWE.sol  TLOHoneypotFullLWE128.sol  TLOHoneypotFullLWE32.sol  TLOHoneypotFullLWE64.sol  TLOHoneypotFullLWEDirect.sol  TLOHoneypotFullLWEOpt.sol
docs/: security-model-v2.md  security-model-v3.md
examples/: .gitkeep  generate_tlo_honeypot.rs
paper/: .gitkeep  macros.tex  tlo-conference.tex  tlo-paper.tex
src/: .gitkeep  circuit.rs  compute_and_compare.rs  control_function.rs  lib.rs  lockable_obfuscation.rs  rainbow.rs  six_six.rs  vdf_obfuscation.rs
src/attacks/: mod.rs  suite.rs
tests/: .gitkeep
