[package]
name = "tlo"
version = "0.1.0"
edition = "2021"
description = "TLO: Topology-Lattice Obfuscation for Smart Contracts"
license = "MIT"
repository = "https://github.com/igor53627/tlo"
keywords = ["cryptography", "obfuscation", "smart-contracts", "lwe", "lattice"]
categories = ["cryptography", "wasm"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5"
