[package]
name = "tlo"
version = "0.1.0"
edition = "2021"
description = "TLO: Topology-Lattice Obfuscation for Smart Contracts"
license = "MIT"
repository = "https://github.com/igor53627/tlo"
keywords = ["cryptography", "obfuscation", "smart-contracts", "lwe", "lattice"]
categories = ["cryptography", "wasm"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "export_tlo_instance"
path = "src/bin/export_tlo_instance.rs"

[[bin]]
name = "lwe_estimator"
path = "src/bin/lwe_estimator.rs"

[[example]]
name = "generate_tlo_honeypot"
path = "examples/generate_tlo_honeypot.rs"
